--- a/public/assets-src/sass/00_vendors/_gridle.scss
+++ b/public/assets-src/sass/00_vendors/_gridle.scss
@@ -1,2 +1,2 @@
-@import '/Users/olivierbossel/data/web/coffeekraken/gridle/index';
-// @import "node_modules/gridle/sass/gridle/gridle";
+// @import '/Users/olivierbossel/data/web/coffeekraken/gridle/index';
+@import "node_modules/coffeekraken-gridle/index";
