--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
 							<div class="hidden">
 								<div id="description">
 									<figure class="ratio-5-1">
-										<img class="abs-cover" src="/dist/img/header-bkg.jpg" />
+										<img class="abs-cover" src="/assets/img/header-bkg.jpg" />
 										<div style="width:150px; position:absolute; top:50%; left:40px; transform:translateY(-50%); max-width:none;">
 											{{#if logo}}
 												<img style="height:45px;" class="inline-block" src="/{{logo}}" />
