--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2023,6 +2023,7 @@
  *
  * @param 				{String} 			$path 						The setting path wanted separated by dots
  * @param 				{String} 			[$context=s-context()] 		The context name to get the setting
+ * @param 				{Mixed} 			[$default=null] 			The value to return if no value is found
  * @return 				{Mixed} 										The setting value¨
  *
  * @example
@@ -4318,7 +4319,7 @@ button {
 
 .gr-0, .gr-1, .gr-2, .gr-3, .gr-4, .gr-5, .gr-6, .gr-7, .gr-8, .gr-9, .gr-10, .gr-11, .gr-12 {
   display: inline-block;
-  min-height: .5px;
+  min-height: 1px;
   line-height: 1;
   float: left;
   -webkit-box-sizing: border-box;
@@ -5434,7 +5435,7 @@ body {
 			 * 	<div style="background:#2b3438; width:100%; height:100%"></div>
 			 * </div>
 			 */
-.p-smaller:not(p) {
+.p-smaller {
   padding: 0.3rem;
 }
 
@@ -5563,7 +5564,7 @@ body {
 			 * 	<div style="background:#2b3438; width:100%; height:100%"></div>
 			 * </div>
 			 */
-.p-small:not(p) {
+.p-small {
   padding: 0.6rem;
 }
 
@@ -5821,7 +5822,7 @@ body {
 			 * 	<div style="background:#2b3438; width:100%; height:100%"></div>
 			 * </div>
 			 */
-.p-medium:not(p) {
+.p-medium {
   padding: 1.4rem;
 }
 
@@ -5950,7 +5951,7 @@ body {
 			 * 	<div style="background:#2b3438; width:100%; height:100%"></div>
 			 * </div>
 			 */
-.p-big:not(p) {
+.p-big {
   padding: 2rem;
 }
 
@@ -6079,7 +6080,7 @@ body {
 			 * 	<div style="background:#2b3438; width:100%; height:100%"></div>
 			 * </div>
 			 */
-.p-bigger:not(p) {
+.p-bigger {
   padding: 3rem;
 }
 
@@ -6699,16 +6700,7 @@ body {
 .h1,
 .tf h1 {
   font-size: 3.5em;
-  line-height: 1.1;
-}
-
-.h1.vr, .documentation blockquote.h1,
-.vr .h1, .documentation blockquote .h1,
-.tf h1.vr,
-.vr
-.tf h1, .documentation blockquote
-.tf h1 {
-  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 /**
@@ -6724,16 +6716,7 @@ body {
 .h2,
 .tf h2 {
   font-size: 3em;
-  line-height: 1.1;
-}
-
-.h2.vr, .documentation blockquote.h2,
-.vr .h2, .documentation blockquote .h2,
-.tf h2.vr,
-.vr
-.tf h2, .documentation blockquote
-.tf h2 {
-  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 /**
@@ -6749,16 +6732,7 @@ body {
 .h3,
 .tf h3 {
   font-size: 2.5em;
-  line-height: 1.1;
-}
-
-.h3.vr, .documentation blockquote.h3,
-.vr .h3, .documentation blockquote .h3,
-.tf h3.vr,
-.vr
-.tf h3, .documentation blockquote
-.tf h3 {
-  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 /**
@@ -6774,16 +6748,7 @@ body {
 .h4,
 .tf h4 {
   font-size: 2em;
-  line-height: 1.1;
-}
-
-.h4.vr, .documentation blockquote.h4,
-.vr .h4, .documentation blockquote .h4,
-.tf h4.vr,
-.vr
-.tf h4, .documentation blockquote
-.tf h4 {
-  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 /**
@@ -6799,16 +6764,7 @@ body {
 .h5,
 .tf h5 {
   font-size: 1.5em;
-  line-height: 1.1;
-}
-
-.h5.vr, .documentation blockquote.h5,
-.vr .h5, .documentation blockquote .h5,
-.tf h5.vr,
-.vr
-.tf h5, .documentation blockquote
-.tf h5 {
-  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 /**
@@ -6824,16 +6780,7 @@ body {
 .h6,
 .tf h6 {
   font-size: 1em;
-  line-height: 1.1;
-}
-
-.h6.vr, .documentation blockquote.h6,
-.vr .h6, .documentation blockquote .h6,
-.tf h6.vr,
-.vr
-.tf h6, .documentation blockquote
-.tf h6 {
-  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 h1.vr,
@@ -6854,7 +6801,7 @@ h1.vr,
 .vr .h4, .documentation blockquote .h4, .h5.vr, .documentation blockquote.h5,
 .vr .h5, .documentation blockquote .h5, .h6.vr, .documentation blockquote.h6,
 .vr .h6, .documentation blockquote .h6 {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 
 h1.vr:last-child,
@@ -6925,18 +6872,7 @@ h1.vr:last-child,
 .p, .documentation h1 + p,
 .tf p {
   font-size: 1em;
-  line-height: 1.4;
-}
-
-.p.vr, .documentation h1 + p.vr, .documentation blockquote.p,
-.vr .p, .documentation blockquote .p,
-.vr .documentation h1 + p, .documentation
-.vr h1 + p, .documentation blockquote h1 + p,
-.tf p.vr,
-.vr
-.tf p, .documentation blockquote
-.tf p {
-  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 /**
@@ -6964,7 +6900,7 @@ p.vr,
 .vr .p, .documentation blockquote .p,
 .vr .documentation h1 + p, .documentation
 .vr h1 + p, .documentation blockquote h1 + p {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 
 p.vr:last-child,
@@ -7122,24 +7058,17 @@ p.vr:last-child,
   counter-reset: s-list;
 }
 
-.dl.vr, .documentation blockquote.dl,
-.vr .dl, .documentation blockquote .dl,
-.tf dl.vr,
-.vr
-.tf dl, .documentation blockquote
-.tf dl {
-  margin-bottom: 2em;
-}
-
 .dt,
 .tf dl > dt {
   font-weight: bold;
-  margin-bottom: .3em;
+  line-height: 1.5;
+  margin-bottom: 0.5rem;
 }
 
 .dd,
 .tf dl > dd {
-  margin-bottom: .5em;
+  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 /**
@@ -7161,21 +7090,12 @@ p.vr:last-child,
   counter-reset: s-list;
 }
 
-.ul.vr, .documentation blockquote.ul,
-.vr .ul, .documentation blockquote .ul,
-.tf ul.vr,
-.vr
-.tf ul, .documentation blockquote
-.tf ul {
-  margin-bottom: 2em;
-}
-
 .ul > .li,
 .ul > li,
 .tf ul > li {
   padding-left: 1em;
   position: relative;
-  margin-bottom: .3em;
+  line-height: 1.5;
 }
 
 .ul > .li:before,
@@ -7231,21 +7151,12 @@ p.vr:last-child,
   counter-reset: s-list;
 }
 
-.ol.vr, .documentation blockquote.ol,
-.vr .ol, .documentation blockquote .ol,
-.tf ol.vr,
-.vr
-.tf ol, .documentation blockquote
-.tf ol {
-  margin-bottom: 2em;
-}
-
 .ol > .li,
 .ol > li,
 .tf ol > li {
   padding-left: 1em;
   position: relative;
-  margin-bottom: .3em;
+  line-height: 1.5;
 }
 
 .ol > .li:before,
@@ -7296,7 +7207,7 @@ dl.vr,
 .dl, .ul.vr, .documentation blockquote.ul,
 .vr .ul, .documentation blockquote .ul, .ol.vr, .documentation blockquote.ol,
 .vr .ol, .documentation blockquote .ol {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 
 dl.vr:last-child,
@@ -7381,6 +7292,12 @@ ol.vr .dl, ol.vr .ul, ol.vr .ol,
 .dt,
 .tf dl > dt {
   font-weight: bold;
+  color: #848e91;
+}
+
+.dd,
+.tf dl > dd {
+  color: #848e91;
 }
 
 .ul > .li,
@@ -7388,6 +7305,7 @@ ol.vr .dl, ol.vr .ul, ol.vr .ol,
 .tf ul > li {
   padding-left: 1em;
   position: relative;
+  color: #848e91;
 }
 
 .ul > .li:before,
@@ -7429,6 +7347,7 @@ ol.vr .dl, ol.vr .ul, ol.vr .ol,
 .tf ol > li {
   padding-left: 1em;
   position: relative;
+  color: #848e91;
 }
 
 .ol > .li:before,
@@ -8130,11 +8049,42 @@ s-interactive-demo s-codemirror {
   width: 9999999px;
 }
 
-.table--responsive {
+.table--responsive-overflow {
   min-height: 0.01%;
   overflow-x: auto;
   width: 100%;
   overflow-y: hidden;
+}
+
+@media (max-width: 640px) {
+  .table--responsive {
+    /* Force table to not be like tables anymore */
+    /* Hide table headers (but not display: none;, for accessibility) */
+  }
+  .table--responsive, .table--responsive thead, .table--responsive tbody, .table--responsive th, .table--responsive td, .table--responsive tr {
+    display: block;
+  }
+  .table--responsive thead .tr,
+  .table--responsive thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  .table--responsive .td,
+  .table--responsive td {
+    /* Behave  like a "row" */
+    position: relative;
+    padding-left: 50%;
+    width: 100% !important;
+  }
+  .table--responsive .td:before,
+  .table--responsive td:before {
+    position: absolute;
+    width: 45%;
+    padding: 0.8em 1.4em;
+    white-space: nowrap;
+    content: attr(label);
+  }
 }
 
 /**
@@ -8189,6 +8139,37 @@ s-interactive-demo s-codemirror {
 .table--middle td, .table--middle .td,
 .table--middle th, .table--middle .th {
   vertical-align: middle;
+}
+
+/**
+		 * @name 		Interactive table
+		 * Display cursor on table rows contents
+		 * @styleguide 		Objects / Table
+		 * @example 		html
+		 * <table class="table table--interactive">
+		 * 	<tr>
+		 *  	<th>#</th>
+		 *  	<th>Table head 1</th>
+		 *  	<th>Table head 2</th>
+		 *  	<th>Table head 3</th>
+		 * 	</tr>
+		 * 	<tr>
+		 *  	<td>1</td>
+		 *  	<td>Table cell 1</td>
+		 *  	<td>
+		 *  		Mauris sem nulla, maximus id dignissim vitae,<br>
+		 *  		ullamcorper a turpis. Vestibulum vel eros non nisl<br>
+		 *  		euismod tempus vitae non turpis.
+		 *  	</td>
+		 *  	<td>Table cell 3</td>
+		 * 	</tr>
+		 * </table>
+		 */
+.table--interactive tbody tr,
+.table--interactive tbody .tr,
+.table--interactive .tbody tr,
+.table--interactive .tbody .tr {
+  cursor: pointer;
 }
 
 .table, .documentation table {
@@ -8258,7 +8239,7 @@ s-interactive-demo s-codemirror {
   border-bottom: 1px solid rgba(132, 142, 145, 0.1);
 }
 
-.table tr:last-of-type, .documentation table tr:last-of-type {
+.table tbody tr:last-of-type, .documentation table tbody tr:last-of-type {
   border-bottom: none;
 }
 
