--- a/public/assets-src/sass/06_blocks/_s-custom-scrollbar.scss
+++ b/public/assets-src/sass/06_blocks/_s-custom-scrollbar.scss
@@ -1,7 +1,7 @@
-@import '/Users/olivierbossel/data/web/coffeekraken/s-custom-scrollbar-component/index';
-@include s-custom-scrollbar-component(
-	$colors : default primary secondary success error warning info
-);
-@include s-custom-scrollbar-track() {
-	width:2px !important;
-}
+// @import '/Users/olivierbossel/data/web/coffeekraken/s-custom-scrollbar-component/index';
+// @include s-custom-scrollbar-component(
+// 	$colors : default primary secondary success error warning info
+// );
+// @include s-custom-scrollbar-track() {
+// 	width:2px !important;
+// }
