--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -58,7 +58,7 @@
 												<span class="small">{{packageJson.version}}</span>
 											{{/if}}
 										</h1>
-										<p class="p p--lead m-b">
+										<p class="p p--lead m-b-big">
 											{{packageJson.description}}
 										</p>
 
@@ -127,31 +127,31 @@
 				<i class="fa fa-caret-up pull-right"></i>
 			</a>
 			<ul class="list list--menu m-b">
-				{{#each styleguide.all}}
+				{{#eachSorted styleguide.all}}
 					<li class="list__item">
-						<a href="styleguide-{{@key}}"
+						<a href="styleguide-{{key}}"
 							class="list__item--toggle"
 							is="s-activate"
-							id="styleguide-{{@key}}"
+							id="styleguide-{{key}}"
 							save-state="localStorage" toggle="true" history="false" prevent-scroll>
-							{{{@key}}}
+							{{{key}}}
 							<i class="fa fa-plus pull-right" style="font-size:8px;"></i>
 							<i class="fa fa-minus pull-right" style="font-size:8px;"></i>
 							<s-ripple></s-ripple>
 						</a>
 						<ul class="list list--submenu">
-							{{#each this}}
+							{{#eachSorted this.value}}
 								<li class="list__item">
-									<a href="/styleguide/{{@../key}}#{{@key}}">
-										{{{@key}}}
+									<a href="/styleguide/{{../key}}/{{key}}">
+										{{{key}}}
 										<s-ripple></s-ripple>
 									</a>
 
 								</li>
-							{{/each}}
+							{{/eachSorted}}
 						</ul>
 					</li>
-				{{/each}}
+				{{/eachSorted}}
 			</ul>
 		{{/if}}
 		{{#if documentation}}
