--- a/public/assets-src/sass/07_objects/_btn.scss
+++ b/public/assets-src/sass/07_objects/_btn.scss
@@ -1,6 +1,7 @@
 /**
  * Buttons
  */
+@import 'node_modules/coffeekraken-s-button-component/index';
 @include s-button-classes(
 	$colors : default primary secondary
 );
