--- a/public/assets-src/sass/07_objects/_tooltip.scss
+++ b/public/assets-src/sass/07_objects/_tooltip.scss
@@ -1,3 +1,4 @@
+@import 'node_modules/coffeekraken-s-tooltip-component/index';
 @include s-tooltip-classes(
 	$colors : default primary secondary
 );
