do not use anymore the nav included sugar component cause it’s deprecated

--- a/public/assets-src/sass/06_blocks/_nav.scss
+++ b/public/assets-src/sass/06_blocks/_nav.scss
@@ -5,12 +5,11 @@
 
 }
 
-/**
- * @name 	Nav justified
- */
-@include s-component('nav') {
-	@include s-nav-justify-classes-bare();
-	@include s-nav-inline-classes-bare();
+.nav--inline {
+
+	.nav__item {
+		display:inline-block;
+	}
 }
 
 
