update s-activate component

--- a/public/assets-src/sass/07_objects/_s-select.scss
+++ b/public/assets-src/sass/07_objects/_s-select.scss
@@ -1,2 +1,3 @@
+@import 'node_modules/coffeekraken-s-form-component/index';
 @import 'node_modules/coffeekraken-s-select-component/index';
 @include s-select-classes();
