--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -138,7 +138,7 @@
 							class="list__item--toggle"
 							is="s-activate"
 							id="styleguide-{{key}}"
-							save-state="localStorage" toggle="true" history="false" prevent-scroll>
+							save-state="localStorage" toggle>
 							{{{key}}}
 							<i class="fa fa-plus pull-right" style="font-size:8px;"></i>
 							<i class="fa fa-minus pull-right" style="font-size:8px;"></i>
