--- a/public/assets-src/sass/03_generic/_typography.scss
+++ b/public/assets-src/sass/03_generic/_typography.scss
@@ -1,3 +1,4 @@
+@import 'node_modules/coffeekraken-s-typography-component/index';
 @include s-typography-title-classes();
 @include s-typography-paragraph-classes();
 @include s-typography-link-classes();
