work on styleguide and components titles display

--- a/public/assets-src/sass/06_blocks/_components.scss
+++ b/public/assets-src/sass/06_blocks/_components.scss
@@ -11,7 +11,7 @@
 		margin:s-space(bigger) * -1;
 		margin-bottom: s-space(bigger);
 		padding-bottom:s-space(bigger);
-		padding:s-space(bigger);
+		padding:s-space(medium) s-space(bigger);
 	}
 
 	iframe {
