--- a/public/app/views/components.handlebars
+++ b/public/app/views/components.handlebars
@@ -1,50 +1,21 @@
 <section class="row components">
 	<div class="gr-12">
-		<h1 class="h1">
-			{{ components.title }}
-		</h1>
 
-		<script>
-			function resizeIframe(obj) {
-				obj.style.height = obj.contentWindow.document.body.scrollHeight + 40 + 'px';
-			}
-		</script>
-		<iframe width="100%" height="1" srcdoc="
-			{{{ components.result }}}
-			{{#each components.inject.styles}}
-				<link rel=&quot;stylesheet&quot; href={{{this}}} />
-			{{/each}}
-			<style>
-				body { padding: 20px; }
-			</style>
-		" onload="resizeIframe(this)"></iframe>
-
-		<ul class="tabs">
-			{{#if components.viewContent}}
-				<li class="tabs__item">
-					<a href="#components-view" is="s-activate" group="components" class="active">
-						View
-					</a>
-				</li>
-			{{/if}}
-			{{#if components.dataContent}}
-				<li class="tabs__item">
-					<a href="#components-data" is="s-activate" group="components">
-						Data
-					</a>
-				</li>
-			{{/if}}
-			{{#if components.readmeContent}}
-				<li class="tabs__item">
-					<a href="#components-readme" is="s-activate" group="components">
-						Readme
-					</a>
-				</li>
-			{{/if}}
-		</ul>
+		{{#if components.readmeContent}}
+			<div class="tf vr m-b-big">
+				{{{ components.readmeContent }}}
+			</div>
+		{{else}}
+			<h1 class="h1 m-b">
+				{{components.title}}
+			</h1>
+		{{/if}}
 
 		{{#if components.viewContent}}
-			<div class="tabs__content" id="components-view">
+			<a href="#component-view-content" class="toggle-code" is="s-activate" toggle>
+				<i class="fa fa-code"></i> Show/hide view source code
+			</a>
+			<div class="components__view-data m-b-big" id="component-view-content">
 				<pre>
 					<code class="lang-html">
 						{{ components.viewContent }}
@@ -52,20 +23,45 @@
 				</pre>
 			</div>
 		{{/if}}
-		{{#if components.dataContent}}
-			<div class="tabs__content" id="components-data">
-				<pre>
-					<code class="lang-json">
-						{{{ components.dataContent }}}
-					</code>
-				</pre>
-			</div>
-		{{/if}}
-		{{#if components.readmeContent}}
-			<div class="tabs__content tf vr" id="components-readme">
-				{{{ components.readmeContent }}}
-			</div>
-		{{/if}}
 
+		<script>
+			function resizeIframe(obj) {
+				obj.style.height = obj.contentWindow.document.body.scrollHeight + 40 + 'px';
+			}
+		</script>
+
+		{{#each components.components}}
+
+			<div class="components__separator"></div>
+
+			<h2 class="h2 m-b t-capitalize">{{this.title}}</h2>
+
+			<iframe width="100%" height="1" srcdoc="
+				{{{ this.result }}}
+				{{#each ../components.inject.styles}}
+					<link rel=&quot;stylesheet&quot; href={{{this}}} />
+				{{/each}}
+				{{#each ../components.inject.scripts}}
+					<script src={{{this}}}></script>
+				{{/each}}
+				<style>
+					body { padding: 20px; }
+				</style>
+			" onload="resizeIframe(this)"></iframe>
+
+
+			{{#if this.dataContent}}
+				<a href="#components-data-{{@index}}" class="toggle-code" is="s-activate" toggle>
+					<i class="fa fa-code"></i> Show/hide view data
+				</a>
+				<div class="components__data-content" id="components-data-{{@index}}">
+					<pre>
+						<code class="lang-json">
+							{{{ this.dataContent }}}
+						</code>
+					</pre>
+				</div>
+			{{/if}}
+		{{/each}}
 	</div>
 </section>
