--- a/public/assets-src/sass/06_blocks/_components.scss
+++ b/public/assets-src/sass/06_blocks/_components.scss
@@ -1,24 +1,38 @@
 .components {
 
-	.h1 {
-		background-color:s-color(title, -lighten 10%);
-		// background-image:url('../img/header-bkg-grey.png');
-		background-blend-mode: luminosity;
-		background-repeat:no-repeat;
-		background-size:cover;
-		color: white;
-		border-bottom:1px solid s-color(border);
-		margin:s-space(bigger) * -1;
-		margin-bottom: s-space(bigger);
-		padding-bottom:s-space(bigger);
-		padding:s-space(medium) s-space(bigger);
-	}
-
 	iframe {
 		border: solid 10px darken(white, 1%);
+		margin-bottom: s-rem(-2px);
 	}
 
 	.tabs {
 		margin-top: s-rem(-2px);
+	}
+
+	.components__separator {
+		background: darken(white, 1%);
+		height: s-rem(30px);
+		margin: s-space(bigger) s-space(bigger)*-1;
+
+	}
+
+	.toggle-code {
+		padding: s-space(default);
+		text-decoration: none;
+		display: block;
+		background: darken(white, 1%);
+
+		&:hover {
+			background: darken(white, 3%);
+		}
+	}
+
+	.components__data-content,
+	.components__view-data {
+		display: none;
+
+		&.active {
+			display: block;
+		}
 	}
 }
