--- a/public/assets-src/sass/06_blocks/_documentation.scss
+++ b/public/assets-src/sass/06_blocks/_documentation.scss
@@ -92,10 +92,9 @@
 	}
 	.img-fullscreen {
 		position:fixed;
-		z-index:10;
-		top:50%; left:50%;
-		@include s-translate(-50%, -50%);
-		width:100%; height:100%;
+		z-index:999;
+		top:0; left:s-rem(40px);
+		width:calc(100% - 40px); height:100%;
 		background: s-color(secondary, -opacity .8);
 		object-fit: scale-down;
 		cursor: pointer;
