fix: minor issue with iframe height in components

--- a/public/app/views/components.handlebars
+++ b/public/app/views/components.handlebars
@@ -109,7 +109,7 @@
 			>
 				<iframe width="100%"
 					height="{{#if ../components.metas.height}}
-							{{../components.metas.heightm}}
+							{{../components.metas.height}}
 						{{else}}
 							1
 						{{/if}}
